@@ -1,28 +1,31 @@
 package top.yqingyu.common.utils;
 
 import org.apache.commons.lang3.StringUtils;
-import org.apache.http.HttpResponse;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.HttpDelete;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.client.methods.HttpPut;
-import org.apache.http.conn.ClientConnectionManager;
-import org.apache.http.conn.scheme.Scheme;
-import org.apache.http.conn.scheme.SchemeRegistry;
-import org.apache.http.conn.ssl.SSLSocketFactory;
-import org.apache.http.entity.ByteArrayEntity;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.message.BasicNameValuePair;
+import org.apache.hc.client5.http.classic.HttpClient;
+import org.apache.hc.client5.http.classic.methods.HttpDelete;
+import org.apache.hc.client5.http.classic.methods.HttpGet;
+import org.apache.hc.client5.http.classic.methods.HttpPost;
+import org.apache.hc.client5.http.classic.methods.HttpPut;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.client5.http.impl.classic.HttpClients;
+import org.apache.hc.client5.http.impl.io.PoolingHttpClientConnectionManagerBuilder;
+import org.apache.hc.client5.http.io.HttpClientConnectionManager;
+import org.apache.hc.client5.http.ssl.NoopHostnameVerifier;
+import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactory;
+import org.apache.hc.core5.http.ContentType;
+import org.apache.hc.core5.http.HttpResponse;
+import org.apache.hc.core5.http.NameValuePair;
+import org.apache.hc.core5.http.io.entity.ByteArrayEntity;
+import org.apache.hc.core5.http.io.entity.StringEntity;
+import org.apache.hc.core5.http.message.BasicNameValuePair;
+import org.apache.hc.core5.net.WWWFormCodec;
 
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.security.cert.X509Certificate;
@@ -31,7 +34,6 @@ import java.util.List;
 import java.util.Map;
 
 
-@SuppressWarnings("all")
 public class HttpUtils {
 
     /**
@@ -89,9 +91,14 @@ public class HttpUtils {
             for (String key : bodys.keySet()) {
                 nameValuePairList.add(new BasicNameValuePair(key, bodys.get(key)));
             }
-            UrlEncodedFormEntity formEntity = new UrlEncodedFormEntity(nameValuePairList, "utf-8");
-            formEntity.setContentType("application/json; charset=UTF-8");
-            request.setEntity(formEntity);
+
+            //http5
+            StringEntity stringEntity = new StringEntity(WWWFormCodec.format(
+                    nameValuePairList,
+                    ContentType.APPLICATION_JSON.getCharset()),
+                    ContentType.APPLICATION_JSON.withCharset(StandardCharsets.UTF_8));
+
+            request.setEntity(stringEntity);
         }
 
         return httpClient.execute(request);
@@ -122,7 +129,7 @@ public class HttpUtils {
         }
 
         if (StringUtils.isNotBlank(body)) {
-            request.setEntity(new StringEntity(body, "utf-8"));
+            request.setEntity(new StringEntity(body, ContentType.APPLICATION_JSON.withCharset(StandardCharsets.UTF_8)));
         }
 
         return httpClient.execute(request);
@@ -153,7 +160,7 @@ public class HttpUtils {
         }
 
         if (body != null) {
-            request.setEntity(new ByteArrayEntity(body));
+            request.setEntity(new ByteArrayEntity(body, ContentType.APPLICATION_OCTET_STREAM));
         }
 
         return httpClient.execute(request);
@@ -161,6 +168,7 @@ public class HttpUtils {
 
     /**
      * Put String
+     *
      * @param host
      * @param path
      * @param method
@@ -183,7 +191,7 @@ public class HttpUtils {
         }
 
         if (StringUtils.isNotBlank(body)) {
-            request.setEntity(new StringEntity(body, "utf-8"));
+            request.setEntity(new StringEntity(body));
         }
 
         return httpClient.execute(request);
@@ -191,6 +199,7 @@ public class HttpUtils {
 
     /**
      * Put stream
+     *
      * @param host
      * @param path
      * @param method
@@ -213,7 +222,7 @@ public class HttpUtils {
         }
 
         if (body != null) {
-            request.setEntity(new ByteArrayEntity(body));
+            request.setEntity(new ByteArrayEntity(body, ContentType.APPLICATION_OCTET_STREAM));
         }
 
         return httpClient.execute(request);
@@ -263,7 +272,7 @@ public class HttpUtils {
                     sbQuery.append(query.getKey());
                     if (!StringUtils.isBlank(query.getValue())) {
                         sbQuery.append("=");
-                        sbQuery.append(URLEncoder.encode(query.getValue(), "utf-8"));
+                        sbQuery.append(URLEncoder.encode(query.getValue(), StandardCharsets.UTF_8));
                     }
                 }
             }
@@ -275,39 +284,34 @@ public class HttpUtils {
         return sbUrl.toString();
     }
 
-    private static HttpClient wrapClient(String host) {
-        HttpClient httpClient = new DefaultHttpClient();
+    private static HttpClient wrapClient(String host) throws NoSuchAlgorithmException, KeyManagementException {
+        CloseableHttpClient httpClient = HttpClients.createDefault();
         if (host.startsWith("https://")) {
-            sslClient(httpClient);
+            return sslClient(httpClient);
         }
 
         return httpClient;
     }
 
-    private static void sslClient(HttpClient httpClient) {
-        try {
-            SSLContext ctx = SSLContext.getInstance("TLS");
-            X509TrustManager tm = new X509TrustManager() {
-                public X509Certificate[] getAcceptedIssuers() {
-                    return null;
-                }
-                public void checkClientTrusted(X509Certificate[] xcs, String str) {
+    private static HttpClient sslClient(HttpClient httpClient) throws KeyManagementException, NoSuchAlgorithmException {
 
-                }
-                public void checkServerTrusted(X509Certificate[] xcs, String str) {
+        SSLContext ctx = SSLContext.getInstance("TLS");
+        X509TrustManager tm = new X509TrustManager() {
+            public X509Certificate[] getAcceptedIssuers() {
+                return null;
+            }
 
-                }
-            };
-            ctx.init(null, new TrustManager[] { tm }, null);
-            SSLSocketFactory ssf = new SSLSocketFactory(ctx);
-            ssf.setHostnameVerifier(SSLSocketFactory.ALLOW_ALL_HOSTNAME_VERIFIER);
-            ClientConnectionManager ccm = httpClient.getConnectionManager();
-            SchemeRegistry registry = ccm.getSchemeRegistry();
-            registry.register(new Scheme("https", 443, ssf));
-        } catch (KeyManagementException ex) {
-            throw new RuntimeException(ex);
-        } catch (NoSuchAlgorithmException ex) {
-            throw new RuntimeException(ex);
-        }
+            public void checkClientTrusted(X509Certificate[] xcs, String str) {
+
+            }
+
+            public void checkServerTrusted(X509Certificate[] xcs, String str) {
+
+            }
+        };
+        ctx.init(null, new TrustManager[]{tm}, null);
+        SSLConnectionSocketFactory sslFactory = new SSLConnectionSocketFactory(ctx, new NoopHostnameVerifier());
+        HttpClientConnectionManager connMgr = PoolingHttpClientConnectionManagerBuilder.create().setSSLSocketFactory(sslFactory).build();
+        return HttpClients.custom().setConnectionManager(connMgr).setUserAgent("MyService").build();
     }
 }
